fixed address icon gap in footer

--- a/assets/styles/scss/_footer.scss
+++ b/assets/styles/scss/_footer.scss
@@ -107,7 +107,7 @@
 }
 .footer__contacts__address-text {
   display: flex;
-  gap: 8px;
+  gap: 14px;
   align-items: center;
   padding-left: clamp(5px, 0.34vw, 8px);
 }
