--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -1439,7 +1439,7 @@ input:checked ~ .tab-label .tab-ico {
 
 .footer__contacts__address-text {
   display: flex;
-  gap: 8px;
+  gap: 14px;
   align-items: center;
   padding-left: clamp(5px, 0.34vw, 8px);
 }
